fix: decrease z-index of textbox

--- a/mdi-react/src/components/Colored-Containers.module.scss
+++ b/mdi-react/src/components/Colored-Containers.module.scss
@@ -54,7 +54,7 @@
     font-family: $font-family-general;
     color: $grey-700;
     font-size: 1.15rem;
-    z-index: 10;
+    z-index: 5;
     padding-top: 1.8em;
     display: flex;
     flex-direction: column;
